--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,7 +1,9 @@
 {% extends "base_template.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
-<h1>This is the home page</h1>
+<h1>This is the login page</h1>
 <hr>
+
+
 {% endblock %}
