--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,7 +1,7 @@
 {% extends "base_template.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<h1>This is the home page</h1>
+<h1>This is the sign up page</h1>
 <hr>
 {% endblock %}
