--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -49,7 +49,8 @@
         placeholder="Confirm password"
         />
     </div>
-
+    <br />
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
 
