--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -2,8 +2,34 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h1>This is the login page</h1>
-<hr>
+<!-- <h1>This is the login page</h1>
+<hr> -->
 
+<form method="POST">
+    <h3 align="center">Login</h3>
+    <div class="form-group">
+        <label for="email">Email Address</label>
+        <!-- the name parameter is accessed in the backend -->
+        <input type="email" 
+        class="form-control" 
+        id="email" name="email" 
+        placeholder="Enter email"
+        />
+    </div>
+
+    <div class="form-group">
+        <label for="password">Password</label>
+        <!-- the name parameter is accessed in the backend -->
+        <input type="password" 
+        class="form-control" 
+        id="password" 
+        name="password" 
+        placeholder="Enter password"
+        />
+    </div>
+
+    <br />
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
 
 {% endblock %}
